# body-feature-extaction

./: CMakeLists.txt  NEWS.md  README.md
src/: armpoint.cc  armpoint.h  bodyposition.cc  bodyposition.h  converttobinary.cc  converttobinary.h  front_height.cc  front_height.h  hand.cc  hand.h  main.cc  middlepoint.cc  middlepoint.h  point_gradient.cc  point_gradient.h  shoulderwidth.cc  shoulderwidth.h  side_height.cc  side_height.h  waist.cc  waist.h
